k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app
  namespace: portfolio
spec:
  template:
    spec:
      imagePullSecrets: []
      containers:
        - name: php-fpm
          imagePullPolicy: Never
